# mypenpals

./: .gitignore  .gitmodules
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.js
cpp_server/: CMakeLists.txt  chat.cpp  index.html
play/: build.sbt
play/app/views/: index.scala.html
play/conf/: application.conf  deploy.conf
play/conf/nginx/: nginx.conf
play/conf/runit/: log-run.sh  run.sh
play/project/: plugins.sbt
